# latte_compiler

./: .gitignore  LICENSE  Makefile  README  README.md  checker  heaptrack.simpl1.bc.187726.zst  heaptrack.simpl1.bc.188049.zst  heaptrack.simpl1.bc.188463.zst  heaptrack.simpl1.bc.188590.zst  heaptrack.simpl1.bc.188648.zst  heaptrack.simpl1.bc.188678.zst  heaptrack.simpl1.bc.189631.zst  heaptrack.simpl1.bc.189756.zst  heaptrack.simpl1.bc.190878.zst  heaptrack.simpl1.bc.191326.zst  heaptrack.simpl1.bc.191456.zst  latte.cabal  latte.cf  latte2.cf  lattests240919.tgz  makefile  test  test.py
latte/: Abs.hs  Lex.hs  Par.hs  Print.hs
latte_old/: Lex.hs  Par.hs  Print.hs
lattests/extensions/struct/: list.bc  list.ll
lattests/good/: core001.bc  core001.lat  core001.ll  core002.bc  core002.ll  core003.bc  core003.ll  core004.bc  core004.ll  core005.bc  core005.ll  core006.bc  core006.ll  core007.bc  core007.ll  core008.bc  core008.ll  core009.bc  core009.ll  core010.bc  core010.ll  core011.bc  core011.ll  core012.bc  core012.ll  core013.bc  core013.ll  core014.bc  core014.ll  core015.bc  core015.ll  core016.bc  core016.ll  core017.bc  core017.ll  core018.bc  core018.ll  core019.bc  core019.ll  core020.bc  (+27 more)
lib/: functions.ll
mrjp-tests/good/basic/: add.bc  add.ll  bool_operations.ll  compare.bc  (+29 more)
simplest/: simpl1.bc  simpl1.lat  simpl1.ll
simplest/gc/: strings1.lat  strings1.out  structs.bc  structs.lat  structs.ll  structs_nested.bc  structs_nested.lat  structs_nested.ll
src/: Common.hs  LLVM.hs  Main.hs  Objects.hs  PostProcess.hs  State.hs  TypeChecker.hs  Types.hs
